--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,4 @@ jobs:
           go-version: "1.25.1"
 
       - name: Check formatting issues
-      - run: test -z $(go fmt ./...)
+        run: test -z $(go fmt ./...)
