--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
       - name: Check out code
         uses: actions/checkout@v4
 
@@ -36,3 +39,6 @@ jobs:
 
       - name: Check formatting issues
         run: test -z $(go fmt ./...)
+
+      - name: Run staticcheck
+        run : staticcheck ./...
