--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
-
       - name: Check out code
         uses: actions/checkout@v4
 
@@ -37,8 +34,10 @@ jobs:
         with:
           go-version: "1.25.1"
 
+      - name: Run staticcheck
+        uses: dominikh/staticcheck-action@v1
+        with:
+          version: "latest"
+
       - name: Check formatting issues
         run: test -z $(go fmt ./...)
-
-      - name: Run staticcheck
-        run : staticcheck ./...
