--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
         uses: dominikh/staticcheck-action@v1
         with:
           version: "latest"
+          install-go: false
 
       - name: Check formatting issues
         run: test -z $(go fmt ./...)
