--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           version: "latest"
           install-go: false
+          args: ./...
 
       - name: Check formatting issues
         run: test -z $(go fmt ./...)
